# rv32-vm

./: .gitignore  CMakeLists.txt  main.cpp
include/: bus.hpp  cpu.hpp  devices.hpp  instr.hpp  mem.hpp  regs.hpp
test/: .prog.s  linker.ld  test.sh
